# lambda-calculus

./: dune-project  lambda_calculus.opam
lib/: ast.ml  ast.mli  dune  lexer.ml  lexer.mli  parser.ml  parser.mli
test/: dune
